--- a/views/index.html
+++ b/views/index.html
@@ -8,19 +8,19 @@
 
     <!-- STYLESHEETS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="public/styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
 
     <!-- VENDOR SCRIPTS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
-    <script src="public/scripts/app.js"></script>
+    <script src="scripts/app.js"></script>
 
   </head>
   <body>
     <div class="container">
       <h1 class="text-center">Under Construction</h1>
-      <img src="asdfdasf">
+      <img src="images/1.jpg">
     </div>
   </body>
 </html>
